update: design variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -33,7 +33,7 @@ $vv-field-error-focus-color: null !default;
 /// Field error :focus border color.
 /// @type color
 /// @group field
-$vv-field-error-focus-border-color: null !default;
+$vv-field-error-focus-border-color: #ec5840 !default;
 
 /// Field error :focus background color.
 /// @type color
