--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -46,6 +46,10 @@ $vv-field-error-focus-background-color: null !default;
 /// @group display
 $vv-display-error-color: #ec5840 !default;
 
+/// Display error margin.
+/// @group display
+$vv-display-error-margin: 0 0 1rem 0 !default;
+
 /// Display error font weight.
 /// @group display
 $vv-display-error-font-weight: bold !default;
