--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -78,6 +78,12 @@ code[class*="language-"] {
   padding: 0;
 }
 
+main img {
+  display: block;
+  margin: 0 0 1rem;
+  width: 100%;
+}
+
 .vertical {
   display: table;
 }
